src/objects/Interaction_Alert__c.object
<CustomObject>
    <fields>
        <fullName>Alert_Comments_at_Display__c</fullName>
        <description>Captures the Alert Comments as they were displayed to the agenet when the Interaction record was created.</description>
        <label>Alert Comments at Display</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alert_Title_at_Display__c</fullName>
        <description>Captures the Alert Title displayed to the agent when the Interaction record was created.</description>
        <label>Alert Title at Display</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert__c</fullName>
        <description>Alert Parent record to this record</description>
        <label>Alert</label>
        <referenceTo>Alert__c</referenceTo>
        <relationshipLabel>Interaction Alerts</relationshipLabel>
        <relationshipName>Interaction_Alerts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <label>ID Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <description>Parent Interaction record to this record</description>
        <label>Interaction</label>
        <referenceTo>Interaction__c</referenceTo>
        <relationshipLabel>Interaction Alerts</relationshipLabel>
        <relationshipName>Interaction_Alerts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Intercation_Alert_Unique_Id_del__c</fullName>
        <externalId>true</externalId>
        <label>Intercation Alert Unique Id</label>
        <length>253</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Interaction Alert</label>
    <nameField>
        <displayFormat>IA-{000000000}</displayFormat>
        <label>Interaction Alert ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>